Update OpenAPI docs and holiday related resources
